--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -14,6 +14,15 @@
     <!-- Shared CSS (must come before module CSS) -->
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/operations-dashboard.css">
+    <script>
+        // Critical UI Interaction - Inlined for robustness
+        window.toggleSidebar = function () {
+            const sidebar = document.querySelector('.sidebar') || document.querySelector('.app-sidebar');
+            const overlay = document.getElementById('appOverlay') || document.querySelector('.app-overlay');
+            if (sidebar) sidebar.classList.toggle('active');
+            if (overlay) overlay.classList.toggle('is-visible');
+        };
+    </script>
 </head>
 
 <body>
