fix: enforce hidden menu toggle on desktop with extreme prejudice

--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -293,7 +293,8 @@
             <section class="section active" id="sectionDashboard">
                 <div class="page-header">
                     <div style="display: flex; align-items: center;">
-                        <button class="menu-toggle" id="mobileMenuBtn" onclick="toggleSidebar()" style="display: none;">
+                        <button class="menu-toggle" id="mobileMenuBtn" onclick="toggleSidebar()"
+                            style="display: none !important;">
                             <i class="bi bi-list"></i>
                         </button>
                         <div>
