fix: restore mobile menu visibility on mobile devices

--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -293,8 +293,7 @@
             <section class="section active" id="sectionDashboard">
                 <div class="page-header">
                     <div style="display: flex; align-items: center;">
-                        <button class="menu-toggle" id="mobileMenuBtn" onclick="toggleSidebar()"
-                            style="display: none !important;">
+                        <button class="menu-toggle" id="mobileMenuBtn" onclick="toggleSidebar()">
                             <i class="bi bi-list"></i>
                         </button>
                         <div>
