fix(ops-dashboard): fix insertBefore error and Leaflet paths
- Add null check before insertBefore to prevent DOM error
- Fix Leaflet CSS/JS paths from /assets/leaflet/ to /lib/leaflet/

--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/bootstrap-icons/bootstrap-icons.css">
     <!-- Leaflet Maps for Delivery Tracking -->
-    <link rel="stylesheet" href="/assets/leaflet/leaflet.css" />
-    <script src="/assets/leaflet/leaflet.js"></script>
+    <link rel="stylesheet" href="/lib/leaflet/leaflet.css" />
+    <script src="/lib/leaflet/leaflet.js"></script>
     <!-- Shared CSS (must come before module CSS) -->
     <link rel="stylesheet" href="css/shared.css">
     <link rel="stylesheet" href="css/operations-dashboard.css">
