--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -1153,7 +1153,7 @@
     <script src="js/shared/toast.js"></script>
     <script src="js/shared/modal.js"></script>
     <script src="js/pagination-utils.js"></script>
-    <script src="js/operations-dashboard.js?v=20251230-final"></script>
+    <script src="js/operations-dashboard.js?v=2026.01.08.1"></script>
 </body>
 
 </html>
