--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -193,6 +193,8 @@
                 <a class="nav-item" data-section="orders">
                     <i class="bi bi-box-seam-fill"></i>
                     Orders
+                    <span class="nav-badge" id="activeOrdersBadge"
+                        style="background: var(--primary); display: none;">0</span>
                     <span class="nav-badge dispute-badge" id="disputeBadge"
                         style="background: #f59e0b; display: none;">0</span>
                 </a>
@@ -263,20 +265,18 @@
                     <i class="bi bi-keyboard"></i>
                 </button>
                 <div class="header-notifications">
-                    <button class="header-btn notification-btn" onclick="toggleNotifications()" id="notificationBtn">
+                    <button class="header-btn notification-btn" onclick="toggleNotificationDropdown()"
+                        id="notificationBtn" style="position: relative;">
                         <i class="bi bi-bell"></i>
-                        <span class="notification-dot" id="notificationDot" style="display: none;"></span>
+                        <span class="notification-badge" style="display: none;">0</span>
                     </button>
-                    <div class="notifications-dropdown" id="notificationsDropdown">
-                        <div class="notifications-header">
-                            <span>Notifications</span>
-                            <button class="btn-link" onclick="markAllRead()">Mark all read</button>
+                    <div class="notification-dropdown" id="notificationDropdown">
+                        <div class="dropdown-header">
+                            <h4>Notifications</h4>
+                            <button onclick="markNotificationRead('all')" class="mark-read-btn">Mark all read</button>
                         </div>
-                        <div class="notifications-list" id="notificationsList">
-                            <div class="notification-empty">
-                                <i class="bi bi-bell-slash"></i>
-                                <span>No new notifications</span>
-                            </div>
+                        <div class="notification-list" id="notificationList">
+                            <div class="loading-spinner"></div>
                         </div>
                     </div>
                 </div>
