fix: add cache busting for garage-dashboard.js

--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -1316,7 +1316,7 @@
     <script src="js/shared/toast.js"></script>
     <script src="js/shared/modal.js"></script>
     <script src="js/pagination-utils.js"></script>
-    <script src="js/garage-dashboard.js"></script>
+    <script src="js/garage-dashboard.js?v=20260109"></script>
 </body>
 
 </html>
