--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -11,7 +11,7 @@
     <script src="/js/chart.min.js"></script>
     <!-- Shared CSS (must come before module CSS) -->
     <link rel="stylesheet" href="css/shared.css">
-    <link rel="stylesheet" href="css/garage-dashboard.css?v=20260109c">
+    <link rel="stylesheet" href="css/garage-dashboard.css?v=20260109d">
     <!-- Leaflet CSS for GPS Location Picker -->
     <link rel="stylesheet" href="/lib/leaflet/leaflet.css" />
     <script>
@@ -265,17 +265,16 @@
                     <i class="bi bi-keyboard"></i>
                 </button>
                 <div class="header-notifications">
-                    <button class="header-btn notification-btn" onclick="toggleNotificationDropdown()"
-                        id="notificationBtn" style="position: relative;">
+                    <button class="header-btn notification-btn" onclick="toggleNotifications()">
                         <i class="bi bi-bell"></i>
-                        <span class="notification-badge" style="display: none;">0</span>
+                        <span class="notification-badge" id="notificationBadge" style="display: none;">0</span>
                     </button>
-                    <div class="notification-dropdown" id="notificationDropdown">
-                        <div class="dropdown-header">
+                    <div class="notifications-dropdown" id="notificationsDropdown">
+                        <div class="notifications-header">
                             <h4>Notifications</h4>
                             <button onclick="markNotificationRead('all')" class="mark-read-btn">Mark all read</button>
                         </div>
-                        <div class="notification-list" id="notificationList">
+                        <div class="notifications-list" id="notificationsList">
                             <div class="loading-spinner"></div>
                         </div>
                     </div>
