fix: bump dashboard version to force cache refresh

--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -1315,7 +1315,7 @@
     <script src="js/pagination-utils.js"></script>
     <script>
         const script = document.createElement('script');
-        script.src = `js/garage-dashboard.js?v=20260110b`;
+        script.src = `js/garage-dashboard.js?v=20260110-FIXED`;
         script.onload = function () {
             console.log('Garage Dashboard Script Loaded');
         };
