Add cache buster to finance/support dashboard JS to bypass Cloudflare cache

--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -496,11 +496,11 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
-    <script src="js/shared/utils.js"></script>
-    <script src="js/shared/toast.js"></script>
-    <script src="js/shared/modal.js"></script>
-    <script src="js/pagination-utils.js"></script>
-    <script src="js/finance-dashboard.js"></script>
+    <script src="js/shared/utils.js?v=20260115b"></script>
+    <script src="js/shared/toast.js?v=20260115b"></script>
+    <script src="js/shared/modal.js?v=20260115b"></script>
+    <script src="js/pagination-utils.js?v=20260115b"></script>
+    <script src="js/finance-dashboard.js?v=20260115b"></script>
 </body>
 
 </html>
