--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -809,6 +809,12 @@
                             <span>Staff</span>
                             <small>Internal employees</small>
                         </div>
+                        <div class="user-type-card" onclick="selectUserType('insurance_agent')"
+                            style="background: linear-gradient(135deg, rgba(30, 64, 175, 0.2), rgba(14, 165, 233, 0.1)); border-color: rgba(59, 130, 246, 0.3);">
+                            <i class="bi bi-shield-fill-check" style="color: #3b82f6;"></i>
+                            <span>Insurance Agent</span>
+                            <small>Insurance partner access</small>
+                        </div>
                         <div class="user-type-card admin-card" onclick="selectUserType('admin')">
                             <i class="bi bi-shield-check"></i>
                             <span>Admin</span>
